<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    
    <!-- Ravi-->
    
    <string name="app_name">Globus</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- COMMON -->
    <string name="msg_internet_connection">Internet connection not available!</string>
    <string name="msg_please_Wait">Please wait...</string>
    <string name="title_activity_activity_registre">ActivityRegistre</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_message">Something went wrong please try again later...</string>
    <string name="font_fontfutul">fonts/FutuLt_0.ttf</string>
    <string name="font_futuram">fonts/FUTURAM.TTF</string>
    <string name="font_tt0144m">fonts/tt0144m_0.ttf</string>

    <!-- FACEBOOK -->
    <string name="fb_app_id">687279781406245</string>
    <string name="fb_email_not_found">Unable to fetch Email address please change your facebook privacy setting</string>

    <!-- REGISTER -->
    <string name="reg_first_name">First Name</string>
    <string name="reg_last_name">Last Name</string>
    <string name="reg_email_address">Email address</string>
    <string name="reg_password">Set a Password</string>
    <string name="reg_mobile_no">Mobile number(for order updates)</string>
    <string name="title_activity_activity_login">ActivityLogin</string>

    <!-- LOGIN SOCIAL -->
    <string name="social_lable_fashion_must_buy">FASHION MUST - BUY</string>
    <string name="social_lable_updgrade">UPGRADE YOURSELF TO LATEST FASHION</string>
    <string name="social_lable_login_register">LOG IN OR REGISTER NOW TO LIKE, COLLECT AND MANAGE ORDERS</string>
    <string name="social_lable_facebook">FACEBOOK</string>
    <string name="social_lable_google">GOOGLE</string>
    <string name="social_lable_continue_with">Continue with</string>
    <string name="social_lable_register">REGISTER</string>
    <string name="social_lable_login">LOGIN</string>
    <string name="social_lable_or">or use email address</string>

    <!-- LOGIN -->
    <string name="login_successfull">Logged  in successfully</string>
    <string name="login_hint_email">Email address</string>
    <string name="login_hint_password">Password</string>
    <string name="login_error_enter_email">Please enter an email address</string>
    <string name="login_error_enter_password">Please enter a password.</string>
    <string name="login_error_enter_password_length">Please enter a password.</string>
    <string name="login_error_enter_valid_email">Please enter valid email address.</string>
    <string name="login_lable_login">LOGIN</string>
    <string name="title_activity_activity_cart">ActivityCart</string>
    <string name="login_lable_forgot_password">Forgot password?</string>
    <string name="title_activity_main_demo">MainDemo</string>
    <string name="login_lable_show">Show</string>

    <!-- FORGOT PASSWORD -->
    <string name="forgotpass_hint_email">Registered email address</string>
    <string name="forgotpass_lable_reset_password">RESET MY PASSWORD</string>
    <string name="forgotpass_lable_header">Enter your email address and we will send you a link to resent your password.</string>
    <string name="forgotpass_error_enter_email">Please enter an email address.</string>
    <string name="forgotpass_error_enter_valid_email">Please enter valid email address.</string>
    <string name="forgotpass_msg_email_success">Email has been sent on your register email address</string>

    <!-- REGISTER -->
    <string name="register_hint_fullname">Full Name</string>
    <string name="register_lable_male">Male</string>
    <string name="register_lable_female">Female</string>
    <string name="register_lable_register">REGISTER</string>
    <string name="register_hint_email">Email address</string>
    <string name="register_hint_password">Set password</string>
    <string name="register_hint_mobile">Mobile number(for order updates)</string>
    <string name="register_progress_total">/20</string>
    <string name="register_error_enter_email">Please enter an email address.</string>
     <string name="register_error_enter_valid_email">Please enter valid email address.</string>
    <string name="register_error_enter_password">Please enter a password.</string>
    <string name="register_error_username_length">Please avoid long name.</string>
    <string name="register_error_username">Please enter username.</string>
    <string name="register_error_invalid_password">Please enter password at least 6 character long.</string>
    <!-- Other -->
    
    
    <string name="txt_sarch_for_type_bands">Search for type and bands</string>
    <string name="title_activity_activity_search_product">ActivitySearchProduct</string>
    <string name="txt_voice_search">Voice Search</string>
    <string name="txt_rs">Rs</string>
    <string name="txt_no_text">No text</string>
    <string name="txt_shop_now">Shop Now</string>
    <string name="txt_barcode_search">Barcode Search</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_activity_sub_category">ActivitySubCategory</string>

  <!-- My Account -->
    <string name="txt_myorder">My Orders</string>
    <string name="txt_noorders">You have no orders</string>
    <string name="txt_items">3 items</string>
    <string name="txt_view">View 3 more</string>
    <string name="txt_myaddress">My Addresses</string>
    <string name="txt_mywishlist">My Wishlist</string>
    <string name="txt_view_wishlist">View Wishlist</string>
    <string name="txt_my_subscription">My Subscriptions</string>
    <string name="txt_view_subscription">View Subscription Details</string>
    <string name="txt_account_settings">Account Settings</string>
    <string name="msg_please_wait">Please wait...</string>

    <!-- Product Details -->
    <string name="txt_tapto">Tap to get best price</string>
    <string name="txt_select_size"> Select Size</string>
    <string name="txt_sizing_help">Sizing Help</string>
    <string name="txt_deliver_option">Delivery options for</string>
    <string name="txt_write_review">Write a review</string>
    <string name="txt_cash_on_delivery">Cash on delivery available</string>
    <string name="txt_features">Features</string>
    <string name="txt_product_description">Product Description</string>
    <string name="txt_alsolike">You May Also Like</string>
    <string name="txt_more">More</string>
    <string name="txt_add_to_wishlist">Add to wishlist</string>
    <string name="txt_change">Change</string>
    <string name="txt_add_to">ADD TO...</string>
    <string name="txt_buy_now">BUY NOW</string>
    <string name="txt_s">S</string>
    <string name="txt_m">M</string>
    <string name="txt_l">L</string>
    <string name="txt_xl">XL</string>
    <string name="no_txt">No Text</string>
    
    <!-- Product list -->
    <string name="filter">FILTER</string>
    <string name="sort">SORT</string>
    <string name="add_to_wishlist">Add To Wishlist</string>
    <string name="similar">Similar</string>
    
</resources>