<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_global_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/d15"
    android:paddingLeft="@dimen/d15"
    android:paddingRight="@dimen/d15"
    android:paddingTop="@dimen/d25" >

    <com.globus.fontutil.TextView_FontFutuLt_0
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotpass_lable_header"
        android:textSize="@dimen/d16" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d20"
        android:orientation="horizontal" >

        <com.globus.fontutil.EditText_FUTURAM
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d25"
            android:background="@color/gray_global_background"
            android:ems="10"
            android:hint="@string/forgotpass_hint_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/d10"
            android:paddingTop="@dimen/d10" >
        </com.globus.fontutil.EditText_FUTURAM>

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_global_yellow"
            android:orientation="vertical" >
        </LinearLayout>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txtForgotPassError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s2dp"
        android:gravity="center_vertical"
        android:text="TextView"
        android:textColor="@color/red"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d25"
        android:background="@drawable/selector_yellow_button"
        android:text="@string/forgotpass_lable_reset_password"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

</LinearLayout>