<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.globus.ActivityLoginContainer" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_global_background"
        android:orientation="vertical"
        android:paddingTop="@dimen/d40" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <com.globus.fontutil.EditText_FUTURAM
                        android:id="@+id/etEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/gray_global_background"
                        android:ems="10"
                        android:hint="@string/login_hint_email"
                        android:inputType="text|textNoSuggestions"
                        android:paddingBottom="@dimen/s5dp"
                        android:paddingTop="@dimen/s5dp" >
                    </com.globus.fontutil.EditText_FUTURAM>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/s5dp"
                android:background="@color/gray_light"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/txtLoginError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/s2dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textColor="@color/red"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10" >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/txtShow"
                    android:orientation="horizontal" >

                    <com.globus.fontutil.EditText_FUTURAM
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/gray_global_background"
                        android:ems="10"
                        android:hint="@string/login_hint_password"
                        android:inputType="textPassword|textNoSuggestions"
                        android:paddingBottom="@dimen/s5dp"
                        android:paddingTop="@dimen/s5dp" >
                    </com.globus.fontutil.EditText_FUTURAM>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/txtShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tilPassword"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="@string/login_lable_show"
                    android:textColor="@color/color_global_yellow" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/s5dp"
                android:background="@color/gray_light"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/txtPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/s2dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textColor="@color/red"
                android:visibility="gone" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d40"
            android:background="@drawable/button_shadow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="top|center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50"
            android:background="@drawable/button_patch"
            android:text="@string/login_lable_login"
            android:textColor="@color/black"
            android:textSize="@dimen/d16"
            android:textStyle="bold" />

        <com.globus.fontutil.TextView_FUTURAM
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d30"
            android:text="@string/login_lable_forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/d18" />
    </LinearLayout>

</LinearLayout>